--- a/t.tex
+++ b/t.tex
@@ -101,18 +101,18 @@
 \chapter{Numerical methods}
 \input{numeric.tex}
 
-\chapter{Experimental methods}
-\input{expe.tex}
-
-\chapter{Results}
-\input{result.tex}
-
-\chapter{Conclusion}
-% \input{conclusion.tex}
-\label{endtext} 
-
-\chapter{Appendices}
- \input{appendices.tex}
+% \chapter{Experimental methods}
+% \input{expe.tex}
+% 
+% \chapter{Results}
+% \input{result.tex}
+% 
+% \chapter{Conclusion}
+% % \input{conclusion.tex}
+% \label{endtext} 
+% 
+% \chapter{Appendices}
+%  \input{appendices.tex}
 
 \chapter*{List of own publications}
 %\input{fd_publications.tex} % TODO
