--- a/appendices.tex
+++ b/appendices.tex
@@ -36,6 +36,7 @@ FRoI 		& Frequency range of interest\\
 FDM 		& Filter diagonalisation method (algorithm)\\
 GVD 		& Group velocity dispersion \\
 IFC		& Isofrequency contours\\
+LHM		& Left-Handed Material\\ %% TODO used anywhere?
 MM		& Metamaterial\\
 NRW 		& Nicolson-Ross-Weir (method for effective parameter retrieval)\\
 NGV 		& Negative group velocity\\
@@ -43,6 +44,7 @@ PBG		& Photonic band-gap\\
 PhC 		& Photonic crystal\\
 PML 		& Perfectly matched layers (absorber in simulation)\\
 PWEM 		& Plane-wave expansion method (algorithm)\\
+RHM'		& Right-Handed Material\\ %% TODO used anywhere?
 STO		& Strontium titanate, SrTiO$_3$ (ferroelectric material)\\
 SRR		& Split-ring resonator\\
 TDTS 		& Time-domain terahertz spectroscopy\\
