--- a/fdphd.bib
+++ b/fdphd.bib
@@ -679,6 +679,7 @@ j%% TODO understand what this is about
   journal = {Phys. Rev. Lett.},
   volume = {58},
   issue = {20},
+  year = {1987},
   pages = {2059--2062},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.58.2059},
