--- a/theory.tex
+++ b/theory.tex
@@ -890,7 +890,8 @@ The inherent ambiguity of description on the basis of the Bloch wave can be used
 
 The space of the plot can be further halved, since all forward and backward propagating solutions are symmetrical with respect to the vertical $K=0$ axis, except for structures with optical activity (c.f. Fig. \ref{fg_dcllactivity}) or even breaking the time-reversal symmetry (c.f. Ref. \cite{vanwolleghem2009unidirectional}), which are not discussed in this thesis. 
 
-In many papers on periodic structures, all dispersion curves are plotted as \textit{folded} into the $K\in\langle0, \pi/a\rangle$ region only (\cite{obrien2002photonic, chakrabarti2001magnetic}), while some employ the symmetry to fold all curves into the $K\in\langle0, \pi/a\rangle$ (e.g. \cite{yannopapas2005negative}). In some other references, such as \cite{mortensen2010unambiguous} or \cite{yeh1977electromagnetic}, unfolded dispersion curves are used.
+In many papers on periodic structures, all dispersion curves are plotted as \textit{folded} into the $K\in\langle0, \pi/a\rangle$ region only (\cite{obrien2002photonic, yannopapas2005negative, chakrabarti2001magnetic}), while some employ the symmetry to fold all curves into the $K\in\langle0, \pi/a\rangle$. % (e.g. \cite{}). 
+In some other references, such as \cite{mortensen2010unambiguous} or \cite{yeh1977electromagnetic}, unfolded dispersion curves are used.
 
 The mathematical interpretation of folding the dispersion curves in vacuum can be found from Eq. (\ref{eq_blochvac2}): 
 \begin{enumerate}
@@ -1239,11 +1240,9 @@ An example of a recent \cite{zhao2009repulsive}, but somewhat controversial \cit
 %}}}
 
 \subsection{Second unification: metamaterials with photonic crystals} 
+Over the 20th century, the paradigms of metamaterials (MM) and photonic crystals (PhC) apparently developed independent of each other. The situation started to change in 2000s, when the metamaterial structures were realized to operate at near-infrared or optical frequencies. As already stated, reduction of the unit cell size becomes a big issue; not only is the contemporary technology somewhat limited in its resolution, but more importantly, with any choice of available materials the dissipative losses become a problem, particularly when the tight confinement is required. 
 
-
-The unification of mm and phc become apparently a more important topic when the metamaterial structures were realized using the available materials. As already stated, reduction of the unit cell size becomes a big issue if the metamaterial is to operate at near-infrared or optical frequencies. Not only the technology is required to have nanometric accuracy in the whole structure, the choice of materials becomes more stringent to the allowable losses, the more the tighter the field confinement is. 
-
-Therefore, in the optical range a compromise is usually made that the particle size becomes only few times smaller than the wavelength of operation, and such a structure then classifies at the boundary of metamaterials and photonic crystals. For example, this is the case of  % TODO 3 examples here!  \cite{yannopapas2005negative} \cite{shamonina2007metamaterials}
+For both reasons, in the optical range a compromise is usually made that the particle size becomes only few times smaller than the wavelength of operation, and such a structure then classifies at the boundary of metamaterials and photonic crystals. For example, this is the case of  % TODO 3 examples here!  \cite{yannopapas2005negative} \cite{shamonina2007metamaterials}
 %Chakrabarti2001_From_effective_response_to_PBG.pdf
 %	scanning the a/λ ratio of SRR array, "medium progressively becomes less homogenizable", 
 %	discuss the possibility of effparam  when λ~3a, "Bragg scattering ... becomes the dominant"
