--- a/theory.tex
+++ b/theory.tex
@@ -890,7 +890,7 @@ The inherent ambiguity of description on the basis of the Bloch wave can be used
 
 The space of the plot can be further halved, since all forward and backward propagating solutions are symmetrical with respect to the vertical $K=0$ axis, except for structures with optical activity (c.f. Fig. \ref{fg_dcllactivity}) or even breaking the time-reversal symmetry (c.f. Ref. \cite{vanwolleghem2009unidirectional}), which are not discussed in this thesis. 
 
-In many papers on periodic structures, all dispersion curves are plotted as \textit{folded} into the $K\in\langle0, \pi/a\rangle$ region only (\cite{obrien2002photonic, yannopapas2005negative, chakrabarti2001magnetic}), while some employ the symmetry to fold all curves into the $K\in\langle0, \pi/a\rangle$. % (e.g. \cite{}). 
+In many papers on periodic structures, all dispersion curves are plotted as \textit{folded} into the $K\in\langle -\pi/a, \pi/a\rangle$ region only (\cite{obrien2002photonic, yannopapas2005negative, chakrabarti2001magnetic}), while some employ the symmetry to fold  all curves further into the $K\in\langle0, \pi/a\rangle$ range. % (e.g. \cite{}). 
 In some other references, such as \cite{mortensen2010unambiguous} or \cite{yeh1977electromagnetic}, unfolded dispersion curves are used.
 
 The mathematical interpretation of folding the dispersion curves in vacuum can be found from Eq. (\ref{eq_blochvac2}): 
