--- a/conclusion.tex
+++ b/conclusion.tex
@@ -17,9 +17,11 @@
 %%% TODO TODO TODO TODO TODO TODO 
 %%% Hole : Conclusion - what to put here?
 %% NOTES: What WAS discussed in the thesis and is special:
-%  * historical notes proving many concepts are as novel as they may appear 
+%  * historical notes 
+% 	(the base line is that many concepts are not as novel as they may appear, and that modern papers
+%	often fail to cite the author of the original idea)
 %  * filled the demand for some starting overview of the common structures
-%  * stress the importance of spatial dispersion
+%  * stress the importance of taking the spatial dispersion into account
 %  * unification of MM and PhC concepts
 %  * attempt for clarification of these two terms
 %  * pointed out the fundamental problems: 
