--- a/fdphd.bib
+++ b/fdphd.bib
@@ -931,6 +931,17 @@ j%% TODO understand what this is about
   year={2007},
   publisher={IOP Publishing}
 }
+@article{antonoyiannakis1997mie,
+  title={Mie resonances and bonding in photonic crystals},
+  author={Antonoyiannakis, MI and Pendry, JB},
+  journal={EPL (Europhysics Letters)},
+  volume={40},
+  number={6},
+  pages={613},
+  year={1997},
+  publisher={IOP Publishing}
+}
+
 
 % perhaps answers the question of magnetic dipole moment not contributing to static permeability "mu ~ OMEGA*f / (omega**2-omega0**2)"
 @article{felbacq2009,
